--- a/script/build
+++ b/script/build
@@ -1,5 +1,8 @@
 #!/usr/bin/env sh
 
+# Build specific modules
+export MODULES="zepto event deferred callbacks touch ajax"
+
 cd zepto
 npm install
 npm run-script dist
