Fuck this shit.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "An automatic CommonJS Zepto wrapper",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "script/build"
+    "dist": "script/build"
   },
   "repository": {
     "type": "git",
